fixed issue of weird whitespace on landing page

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
 @import "tailwindcss";
 
-body{
+/* body{
   overflow-x: hidden;
-}
+} */
+
+/* * {
+  outline: 1px solid red;
+} */
+
 /* Custom animations for Campaign Events page */
 @keyframes fade-in {
   from {
